--- a/views/crm_lead_kanban_inherit.xml
+++ b/views/crm_lead_kanban_inherit.xml
@@ -3,6 +3,7 @@
     <record id="crm_lead_kanban_add_field_inherit" model="ir.ui.view">
         <field name="name">crm.lead.kanban.add.field.inherit</field>
         <field name="model">crm.lead</field>
+        <field name="priority">17</field>
 
         <field name="inherit_id" ref="crm.crm_case_kanban_view_leads"/>
 
@@ -17,6 +18,9 @@
                     <span>Comisión Anual: </span>
                     <field name="annual_commission"/>
                 </div>
+            </xpath>
+            <xpath expr="//kanban" position="attributes">
+                <attribute name="js_class">crm_lead_kanban</attribute>
             </xpath>
         </field>
     </record>
