--- a/wizards/crm_lead_wizard.xml
+++ b/wizards/crm_lead_wizard.xml
@@ -7,14 +7,12 @@
         <field name="model">crm.lead.wizard</field>
         <field name="arch" type="xml">
             <form string="Crm Lead Wizard">
-                <div class="oe_title">
-                    <label for="name"/>
-                    <h1>
-                        <field name="name" placeholder="Name..."/>
-                    </h1>
-                </div>
+                <group>
+                    <field name="fecha_inicio" placeholder="DD/MM/AAAA"/>
+                    <field name="fecha_fin" placeholder="DD/MM/AAAA"/>
+                </group>
                 <footer>
-                    <button name="add" type="object" string="Add" class="oe_highlight"/>
+                    <button name="action_print_excel_report" type="object" string="Generar Excel" class="oe_highlight"/>
                     <button special="cancel" string="Cancel"/>
                 </footer>
             </form>
