--- a/views/crm_lead_tree_inherit.xml
+++ b/views/crm_lead_tree_inherit.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+<!-- Hereda la vista tipo lista de oportunidades (crm.lead) y elimina el campo 'pending_days_char' -->
+<!-- La vista original se encuentra en: modules\zhm_crm\views\crm_views.xml -->
     <record id="crm_lead_tree_show_hide_fields_inherit" model="ir.ui.view">
         <field name="name">crm.lead.tree.show_hide.fields.inherit</field>
         <field name="model">crm.lead</field>
