--- a/views/crm_search_lead_inherit.xml
+++ b/views/crm_search_lead_inherit.xml
@@ -1,16 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+<!-- Hereda la vista de búsqueda de oportunidades (crm.lead) y agrega filtros por área -->
+<!-- La vista original se encuentra en: addons\crm\views\crm_lead_views.xml -->
   <data>
-
     <record id="custom_crm_lead_search_opportunity" model="ir.ui.view">
       <field name="name">crm.lead.search.opportunity</field>
       <field name="model">crm.lead</field>
       <field name="inherit_id" ref="crm.view_crm_case_opportunities_filter"/>
       <field name="arch" type="xml">
-
-        <!-- Insertar dentro del SEARCH del template -->
         <xpath expr="//search" position="inside">
-
-
           <filter name="area_patrimoniales"
                   string="Patrimoniales"
                   domain="[('area_id.name', '=', 'Patrimoniales')]"/>
@@ -23,11 +21,8 @@
           <filter name="area_masivos"
                   string="Masivos"
                   domain="[('area_id.name', '=', 'Masivos')]"/>
-
         </xpath>
-
       </field>
     </record>
-
   </data>
 </odoo>
